{
    "name": "InputActions",
    "maps": [
        {
            "name": "GameControl",
            "id": "f3957450-fd84-4a20-83bd-3436c693c2e1",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "853ee2f2-0198-4614-9a84-23dab71810aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "fb8c3b13-19f3-478d-98be-d7fe4e29b241",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "LeftHold",
                    "type": "Value",
                    "id": "58f2c8a9-71e9-4b2a-849f-511334720191",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold(duration=1,pressPoint=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "36ff2e58-ea46-451d-b1f4-de40aa04dc18",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b29de5ab-68bb-460e-894d-94eb8e2635e9",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b4fe6e3-6eb2-4dcc-b735-74eff1a86c63",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}